# vkEngine

./: .clang-format  .gitignore  .gitmodules  2  CMakeLists.txt  build.sh  project_notes.md  run.sh
ProjectInfo/: .gitignore  main.tex  preamble.tex
cmake/: engine.cmake
shaders/: compute.comp  import.glsl  raytrace.glsl  shader_base.glsl  shader_base.h  shader_base.ini  triangle.frag  triangle.glsl  triangle.h  triangle.vert  triangle_compute.comp
src/: CMakeLists.txt  chunk.c  chunk.h  command.c  command.h  common.h  filewatch.c  filewatch.h  main.c  main.h  raycam.c  raycam.h  raytrace_sample.c  raytrace_sample.h  rendergraph.c  rendergraph.h  res_async.c  res_async.h  resmanager.c  resmanager.h  sample_interface.h  sample_runner.c  sample_runner.h  shader_compiler.c  submit_manager.c  submit_manager.h  system_manager.c  system_manager.h  triangle.c  triangle_sample.c  triangle_sample.h  util.c  util.h  vector.c  vector.h  world.c
src/gpu/: CMakeLists.txt  gpu.c  gpu.h  pipeline.c  pipeline.h  pipeline_hotreload.c  pipeline_hotreload.h  shader_compiler.c  shader_compiler.h  swapchain.c  swapchain.h
